# server.js
@@ -1,18 +1,70 @@
 const express = require('express');
 const bodyParser = require('body-parser');
 const mongodb = require('./db/connect');
+const passport = require('passport');
+const session = require('express-session');
+const GitHubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
 
-const port = process.env.PORT || 8080;
 const app = express();
+const port = process.env.PORT || 8080;
 
 app
   .use(bodyParser.json())
+  // 1. Session middleware 
+  .use(session({
+    secret: process.env.SESSION_SECRET,
+    resave: false,
+    saveUninitialized: true ,
+  }))
+  // 2. Passport middleware
+  .use(passport.initialize())
+  .use(passport.session())
   .use((req, res, next) => {
     res.setHeader('Access-Control-Allow-Origin', '*');
+    res.setHeader(
+      'Access-Control-Allow-Headers',
+      'Origin, X-Requested-With, Content-Type, Accept, Z-Key'
+    );
+    res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
     next();
   })
-  .use('/', require('./routes'));
+  .use(cors({ methods: ['GET','POST','DELETE','UPDATE','PUT','PATCH']}))
+  .use(cors({ origin: '*'}))
+  .use('/', require('./routes')); 
 
+// 3. Passport Strategy Setup 
+passport.use(new GitHubStrategy({
+    clientID: process.env.GITHUB_CLIENT_ID,
+    clientSecret: process.env.GITHUB_CLIENT_SECRET,
+    callbackURL: process.env.CALLBACK_URL
+  },
+  function(accessToken, refreshToken, profile, done) {
+    return done(null, profile);
+  }
+));
+
+passport.serializeUser((user, done) => {
+  done(null, user);
+});
+
+passport.deserializeUser((user, done) => {
+  done(null, user);
+});
+
+app.get('/', (req, res) => {
+  res.send(req.user !== undefined ? `Logged in as ${req.user.displayName}` : "Logged Out");
+});
+
+app.get('/github/callback', 
+  passport.authenticate('github', { failureRedirect: '/api-docs', session: true}),
+  (req, res) => {
+    req.session.user = req.user; 
+    res.redirect('/');
+  }
+);
+
+// Database connection
 mongodb.initDb((err) => {
   if (err) {
     console.log(err);
